fixed alignment issues in the css

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -21,4 +21,12 @@ h1 {
 
 body {
   background-color: aqua;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
+ul > li {
+display: inline-block;
+font-size: 30px;
 }
